--- a/modification.html
+++ b/modification.html
@@ -652,7 +652,7 @@ graph_delete_edges %>% render_graph
 </code></pre>
                     </div>
                     <h2 id="creating-a-subgraph">Creating a Subgraph</h2>
-                    <p></p>
+                    <p>A subgraph is a distinct graph composed of a subset of node and edges from another graph. Creating a subgraph in <strong>DiagrammeR</strong> is done by first creating a selection of nodes or edges and then invoking the <code>create_subgraph_from_selection()</code> function.</p>
                         <div>
                             <img src="img/graph-functions/spacer_2x.png" class="img-responsive center-block">
                         </div>
