--- a/modification.html
+++ b/modification.html
@@ -662,7 +662,7 @@ graph_delete_edges %>% render_graph
                         <div>
                             <img src="img/graph-functions/spacer_2x.png" class="img-responsive center-block">
                         </div>
-                    <p></p>
+                    <p>The following examples demonstrate how a selection of nodes and a subsequet creation of a subgraph can allow for a more focussed view of a larger graph.</p>
                     <div>
                         <pre><code class="prettyprint">
 </code></pre>
