--- a/modification.html
+++ b/modification.html
@@ -803,7 +803,7 @@ c(graph$graph_time,
 </code></pre>
                     </div>
                     <h2 id="rescaling-node-and-edge-attributes">Rescaling Node and Edge Attributes</h2>
-                    <p>Mainly for purposes of scaling data values to values supplied to aesthetics, the <code>rescale_node_attr_in_selection()</code> and <code>rescale_edge_attr_in_selection()</code> functions are available.</p>
+                    <p>Mainly for purposes of scaling data values to values supplied to aesthetics, the <code>rescale_node_attr_in_selection()</code> and <code>rescale_edge_attr_in_selection()</code> functions are available. Both allow for rescaling continuous numeric values to another set of numeric values or to a color range.</p>
                         <div>
                             <img src="img/graph-functions/spacer_2x.png" class="img-responsive center-block">
                         </div>
