--- a/graph_series.html
+++ b/graph_series.html
@@ -103,7 +103,7 @@
             <div class="col-md-9" role="main">
                 <div class="bs-docs-section">
                     <h1 id="graph-series" class="page-header">Graph Series</h1>
-                    <p class="lead">There may be situations where multiple graphs are required for analysis. A convenient means to work with several graphs is with the graph series object, which serializes graph objects. The time and sequence properties of the contained graphs can be used for subsetting. Scripts can be triggered for the series that allow for things such as data collection and creation of multiple graphs within the series object.</p>
+                    <p class="lead">There may be situations where multiple graphs are required for analysis. A convenient means to work with several graphs is with the graph series object, which serializes graph objects. The time and sequence properties of the contained graphs can be used for subsetting. Scripts can be added to the series object and get triggered at will, allowing for things such as data collection and creation of multiple graphs within the series.</p>
                     <h2 id="graph-series-basics">Graph Series Basics</h2>
                     <p></p>
                         <div>
