--- a/modification.html
+++ b/modification.html
@@ -1061,6 +1061,7 @@ graph &lt;-
 # View the initial graph
 graph %>% render_graph
 
+<img src="img/setting-node-or-edge-attributes-1.png" class="img-responsive center-block">
 # Create new node attributes and
 # modify existing node attributes
 graph_modified_node_attrs &lt;-
@@ -1076,7 +1077,9 @@ graph_modified_node_attrs &lt;-
 # View the modified graph
 graph_modified_node_attrs %>%
   render_graph
-</code></pre>
+
+
+<img src="img/setting-node-or-edge-attributes-2.png" class="img-responsive center-block"></code></pre>
                     </div>
                     <h2 id="rescaling-node-and-edge-attributes">Rescaling Node and Edge Attributes</h2>
                     <p>Mainly for purposes of scaling data values to values supplied to aesthetics, the <code>rescale_node_attr_in_selection()</code> and <code>rescale_edge_attr_in_selection()</code> functions are available. Both allow for rescaling continuous numeric values to another set of numeric values or to a color range.</p>
