--- a/modification.html
+++ b/modification.html
@@ -740,8 +740,8 @@ graph_large_node_interactions %>%
                     <div>
                         <pre><code class="prettyprint">###
 # Use the `node_type()`
-# function to inspect and
-# make careful modifications
+# function to inspect and to
+# make several modifications
 # to a node's `type` value
 ###
 
