--- a/traversals.html
+++ b/traversals.html
@@ -196,8 +196,8 @@ create_graph() %>%
 create_graph() %>%
   add_node %>%
   select_nodes_by_id(1) %>%
-  add_n_nodes_from_selection(10) %>%
-  add_n_nodes_to_selection(10) %>%
+  add_n_nodes_ws(10, "from") %>%
+  add_n_nodes_ws(10, "to") %>%
   trav_out %>%
   get_selection
 #>  [1] "2"  "3"  "4"  "5"  "6"  "7"  "8"
@@ -206,8 +206,8 @@ create_graph() %>%
 create_graph() %>%
   add_node %>%
   select_nodes_by_id(1) %>%
-  add_n_nodes_from_selection(10) %>%
-  add_n_nodes_to_selection(10) %>%
+  add_n_nodes_ws(10, "from") %>%
+  add_n_nodes_ws(10, "to") %>%
   trav_in %>%
   get_selection
 #>  [1] "12" "13" "14" "15" "16" "17"
@@ -232,8 +232,8 @@ library(magrittr)
 create_graph() %>%
   add_node %>%
   select_nodes_by_id(1) %>%
-  add_n_nodes_to_selection(3) %>%
-  add_n_nodes_from_selection(3) %>%
+  add_n_nodes_ws(3, "to") %>%
+  add_n_nodes_ws(3, "from") %>%
   trav_both %>%
   get_selection
 #> [1] "5" "6" "7" "2" "3" "4"
