--- a/graph_series.html
+++ b/graph_series.html
@@ -139,16 +139,22 @@ library(magrittr)
 # Create three different graphs
 graph_1 &lt;-
   create_graph() %>%
-    add_node(1) %>% add_node(2) %>% add_node(3) %>%
-    add_edge(1, 3) %>% add_edge(1, 2) %>% add_edge(2, 3)
+    add_node(1) %>%
+    add_node(2) %>%
+    add_node(3) %>%
+    add_edge(1, 3) %>%
+    add_edge(1, 2) %>%
+    add_edge(2, 3)
 
 graph_2 &lt;-
   graph_1 %>%
-    add_node(4) %>% add_edge(4, 3)
+    add_node(4) %>%
+    add_edge(4, 3)
 
 graph_3 &lt;-
   graph_2 %>%
-    add_node(5) %>% add_edge(5, 2)
+    add_node(5) %>%
+    add_edge(5, 2)
 
 # Create an empty graph series
 series &lt;- create_series(series_type = "sequential")
@@ -168,11 +174,11 @@ length(series$graphs)
 
 # Remove 2 graphs from graph series
 series &lt;-
-  remove_from_series(graph_series = series,
-                     index = 2)
+  remove_from_series(
+  graph_series = series, index = 2)
 series &lt;-
-  remove_from_series(graph_series = series,
-                     index = "last")
+  remove_from_series(
+  graph_series = series, index = "last")
 
 # Count the number of graphs in the series
 length(series$graphs)
@@ -201,25 +207,40 @@ library("magrittr")
 
 # Create three graphs with the time attributes set
 graph_time_1 &lt;-
-  create_graph(graph_name = "graph_with_time_1",
-               graph_time = "2015-03-25 03:00",
-               graph_tz = "GMT") %>%
-  add_node(1) %>% add_node(2) %>% add_node(3) %>%
-  add_edge(1, 3) %>% add_edge(1, 2) %>% add_edge(2, 3)
+  create_graph(
+    graph_name = "graph_with_time_1",
+    graph_time = "2015-03-25 03:00",
+    graph_tz = "GMT") %>%
+  add_node(1) %>%
+  add_node(2) %>%
+  add_node(3) %>%
+  add_edge(1, 3) %>%
+  add_edge(1, 2) %>%
+  add_edge(2, 3)
 
 graph_time_2 &lt;-
-  create_graph(graph_name = "graph_with_time_2",
-               graph_time = "2015-03-26 03:00",
-               graph_tz = "GMT") %>%
-  add_node(4) %>% add_node(5) %>% add_node(6) %>%
-  add_edge(4, 6) %>% add_edge(4, 5) %>% add_edge(5, 6)
+  create_graph(
+    graph_name = "graph_with_time_2",
+    graph_time = "2015-03-26 03:00",
+    graph_tz = "GMT") %>%
+  add_node(4) %>%
+  add_node(5) %>%
+  add_node(6) %>%
+  add_edge(4, 6) %>%
+  add_edge(4, 5) %>%
+  add_edge(5, 6)
 
 graph_time_3 &lt;-
-  create_graph(graph_name = "graph_with_time_3",
-               graph_time = "2015-03-27 15:00",
-               graph_tz = "GMT") %>%
-  add_node(7) %>% add_node(8) %>% add_node(9) %>%
-  add_edge(7, 9) %>% add_edge(7, 8) %>% add_edge(8, 9)
+  create_graph(
+    graph_name = "graph_with_time_3",
+    graph_time = "2015-03-27 15:00",
+    graph_tz = "GMT") %>%
+  add_node(7) %>%
+  add_node(8) %>%
+  add_node(9) %>%
+  add_edge(7, 9) %>%
+  add_edge(7, 8) %>%
+  add_edge(8, 9)
 
 # Create an empty graph series
 series_temporal &lt;-
@@ -228,21 +249,25 @@ series_temporal &lt;-
 # Add graphs to the graph series (each graph is added,
 # by default, to the end of the series)
 series_temporal &lt;-
-  graph_time_1 %>% add_to_series(series_temporal)
+  graph_time_1 %>%
+  add_to_series(series_temporal)
 
 series_temporal &lt;-
-  graph_time_2 %>% add_to_series(series_temporal)
+  graph_time_2 %>%
+  add_to_series(series_temporal)
 
 series_temporal &lt;-
-  graph_time_3 %>% add_to_series(series_temporal)
+  graph_time_3 %>%
+  add_to_series(series_temporal)
 
 # Subset the graph series by retaining a graph in by
 # its cardinality (in this case, graph `2` in the
 # series will be retained)
 series_sequence_subset &lt;-
-  subset_series(graph_series = series_temporal,
-                by = "number",
-                values = 2)
+  subset_series(
+    graph_series = series_temporal,
+    by = "number",
+    values = 2)
 
 # Count the number of graphs in the series
 length(series_sequence_subset)
@@ -252,11 +277,12 @@ length(series_sequence_subset)
 # date-time strings in `values` serve as the lower and
 # upper time bounds for graphs to retain in the subset)
 series_time_subset &lt;-
-  subset_series(graph_series = series_temporal,
-                by = "time",
-                values = c("2015-03-25 12:00",
-                           "2015-03-26 12:00"),
-                tz = "GMT")
+  subset_series(
+    graph_series = series_temporal,
+    by = "time",
+    values = c("2015-03-25 12:00",
+               "2015-03-26 12:00"),
+    tz = "GMT")
 
 # Count the number of graphs in this series
 length(series_time_subset)
